@@ -1,6 +1,7 @@
 mpcop (0.3.0) UNRELEASED; urgency=medium
 
   * feat: update the Myst version
+  * feat: polish the intro tour messages
 
  -- Kristian Mika <xmika2@mail.muni.cz>  Fri, 03 Dec 2021 17:52:01 +0100
 
